package jpa.domain;

public enum BorrowStatus {
    IN_PROGRESS,
    BORROWED,
    RETURNED,
    LATE
}

