package jpa.domain;

public enum Role{
    ADMIN,
    USER,
}